--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
     "build": "webpack --progress --hide-modules",
     "watch": "webpack --progress --hide-modules --watch"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
+    "chokidar": "^2.0.0",
     "css-loader": "^0.28.8",
+    "date-fns": "^1.29.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "front-matter": "^2.3.0",
     "markdown-it": "^8.4.0",
@@ -14,5 +15,8 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0"
+  },
+  "devDependencies": {
+    "fs-extra": "^5.0.0"
   }
 }
