--- a/package.json
+++ b/package.json
@@ -1,13 +1,36 @@
 {
+  "name": "risan-website",
+  "description": "Personal website of Risan Bagja Pradana",
+  "version": "0.0.1",
+  "license": "MIT",
+  "homepage": "https://github.com/risan/website#readme",
+  "author": {
+    "name": "Risan Bagja Pradana",
+    "email": "risanbagja@gmail.com",
+    "url": "https://risan.io"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/risan/website.git"
+  },
+  "bugs": {
+    "url": "https://github.com/risan/website/issues"
+  },
+  "keywords": [
+    "website"
+  ],
+  "engines": {
+    "node": ">= 6"
+  },
   "scripts": {
     "production": "NODE_ENV=production node build.js",
     "build": "node build.js",
     "watch": "node build.js --watch"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "chokidar": "^2.0.0",
     "css-loader": "^0.28.8",
-    "date-fns": "^1.29.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "front-matter": "^2.3.0",
     "fs-extra": "^5.0.0",
@@ -18,6 +41,5 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0"
-  },
-  "devDependencies": {}
+  }
 }
