--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "front-matter": "^2.3.0",
     "fs-extra": "^5.0.0",
+    "html-minifier": "^3.5.8",
     "markdown-it": "^8.4.0",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
