--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   "devDependencies": {
     "chokidar": "^2.0.0",
     "css-loader": "^0.28.8",
+    "eslint": "^4.16.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "front-matter": "^2.3.0",
     "fs-extra": "^5.0.0",
