--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^4.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.5.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "front-matter": "^2.3.0",
     "fs-extra": "^5.0.0",
@@ -42,6 +43,7 @@
     "markdown-it": "^8.4.0",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "prettier": "^1.10.2",
     "pug": "^2.0.0-rc.4",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
