--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "css-loader": "^0.28.8",
     "eslint": "^4.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "^2.5.0",
     "extract-text-webpack-plugin": "^3.0.2",
