--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "chokidar": "^2.0.0",
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.8",
     "eslint": "^4.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
