--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "production": "NODE_ENV=production node build.js",
     "build": "node build.js",
     "watch": "node build.js --watch",
+    "webpack": "webpack --progress --hide-modules",
     "lint": "eslint *.js generators",
     "lint-fix": "eslint *.js generators --fix"
   },
@@ -49,6 +50,7 @@
     "pug": "^2.0.0-rc.4",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-manifest-plugin": "^1.3.2"
   }
 }
