--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "scripts": {
     "production": "NODE_ENV=production node build.js",
-    "build": "node build.js",
-    "watch": "node build.js --watch",
+    "build": "node generators/build.js",
+    "watch": "node generators/build.js --watch",
     "webpack": "webpack --progress --hide-modules",
     "lint": "eslint *.js generators",
     "lint-fix": "eslint *.js generators --fix"
