--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "front-matter": "^2.3.0",
     "fs-extra": "^5.0.0",
+    "highlight.js": "^9.12.0",
     "html-minifier": "^3.5.8",
     "markdown-it": "^8.4.0",
+    "markdown-it-named-headings": "^1.1.0",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "prettier": "^1.10.2",
