--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chokidar": "^2.0.0",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.8",
+    "date-fns": "^1.29.0",
     "eslint": "^4.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
