--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "lint-fix": "eslint *.js generators --fix"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.38",
+    "@babel/preset-env": "^7.0.0-beta.38",
+    "babel-loader": "8.0.0-beta.0",
     "chokidar": "^2.0.0",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.8",
